crates/runtime/tests/ui/unit_struct_not_supported.stderr
error: `Layered` does not support unit structs
         help: there is nothing to configure on a struct with no fields
 --> tests/ui/unit_struct_not_supported.rs:4:8
  |
4 | struct Config;
  |        ^^^^^^
