crates/runtime/tests/ui/unit_struct_not_supported.rs
use clap_layers::Layered;

#[derive(Layered)]
struct Config;

fn main() {}
